# jugdcrit

./: .gitignore  Cargo.toml
src/: lib.rs
src/engagelib/: battle.rs  bitfields.rs  controller.rs  forcetexture.rs  help.rs  mapbattleinfo.rs  mod.rs  pool.rs  simulator.rs  tmpro.rs  triggeredskill.rs
src/hooks/: aicalculations.rs  combatdetails.rs  combatui.rs  forecastui.rs  helpmanager.rs  mod.rs
src/unitylib/: engine.rs
