[package]
name = "jugdcrit"
version = "1.0.0"
authors = ["battleship789"]
edition = "2021"

[package.metadata.skyline]
titleid = "0100a6301214e000" # Fire Emblem Engage

[lib]
crate-type = ["cdylib"]

[dependencies]
engage = { git = "https://github.com/DivineDragonFanClub/engage", version = "0.11.0" }
skyline = "0.5.1"
unity = { git = "https://github.com/DivineDragonFanClub/unity", version = "0.3.0" }
bitflags = "2.4.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
